@@ -10,11 +10,11 @@
 \@writefile{lot}{\contentsline {table}{\numberline {4.1}{\ignorespaces Number setting for controller and interface mode\relax }}{38}{table.caption.28}}
 \newlabel{tab:cod-display}{{4.1}{38}{Number setting for controller and interface mode\relax }{table.caption.28}{}}
 \citation{avrdude}
-\newlabel{pic:aref1}{{4.1a}{44}{from 5V to 1.1V \relax }{figure.caption.29}{}}
-\newlabel{sub@pic:aref1}{{a}{44}{from 5V to 1.1V \relax }{figure.caption.29}{}}
-\newlabel{pic:aref5}{{4.1b}{44}{from 1.1V to 5V\relax }{figure.caption.29}{}}
-\newlabel{sub@pic:aref5}{{b}{44}{from 1.1V to 5V\relax }{figure.caption.29}{}}
-\@writefile{lof}{\contentsline {figure}{\numberline {4.1}{\ignorespaces AREF switching with a \relax $1nF\relax \GenericError  {               }{LaTeX Error: Bad math environment delimiter}{See the LaTeX manual or LaTeX Companion for explanation.}{Your command was ignored.\MessageBreak Type  I <command> <return>  to replace it with another command,\MessageBreak or  <return>  to continue without it.} Capacitor\relax }}{44}{figure.caption.29}}
+\newlabel{pic:aref1}{{4.1a}{45}{from 5V to 1.1V \relax }{figure.caption.29}{}}
+\newlabel{sub@pic:aref1}{{a}{45}{from 5V to 1.1V \relax }{figure.caption.29}{}}
+\newlabel{pic:aref5}{{4.1b}{45}{from 1.1V to 5V\relax }{figure.caption.29}{}}
+\newlabel{sub@pic:aref5}{{b}{45}{from 1.1V to 5V\relax }{figure.caption.29}{}}
+\@writefile{lof}{\contentsline {figure}{\numberline {4.1}{\ignorespaces AREF switching with a \relax $1nF\relax \GenericError  {               }{LaTeX Error: Bad math environment delimiter}{See the LaTeX manual or LaTeX Companion for explanation.}{Your command was ignored.\MessageBreak Type  I <command> <return>  to replace it with another command,\MessageBreak or  <return>  to continue without it.} Capacitor\relax }}{45}{figure.caption.29}}
 \@setckpt{40-configuring}{
 \setcounter{page}{46}
 \setcounter{equation}{0}
