@@ -1,4 +1,4 @@
-This is pdfTeX, Version 3.1415926-2.5-1.40.14 (TeX Live 2013/Debian) (format=pdflatex 2015.1.5)  25 APR 2015 19:33
+This is pdfTeX, Version 3.1415926-2.5-1.40.14 (TeX Live 2013/Debian) (format=pdflatex 2015.1.5)  2 MAY 2015 22:16
 entering extended mode
  \write18 enabled.
  %&-line parsing enabled.
@@ -1311,16 +1311,16 @@ Underfull \hbox (badness 10000) in paragraph at lines 103--105
 <../PNG/AREF2_1V.png, id=815, 321.2pt x 234.8775pt>
 File: ../PNG/AREF2_1V.png Graphic file (type png)
  <use ../PNG/AREF2_1V.png>
-Package pdftex.def Info: ../PNG/AREF2_1V.png used on input line 356.
+Package pdftex.def Info: ../PNG/AREF2_1V.png used on input line 362.
 (pdftex.def)             Requested size: 236.15796pt x 172.6956pt.
 
 <../PNG/AREF2VCC.png, id=816, 321.2pt x 234.8775pt>
 File: ../PNG/AREF2VCC.png Graphic file (type png)
  <use ../PNG/AREF2VCC.png>
-Package pdftex.def Info: ../PNG/AREF2VCC.png used on input line 363.
+Package pdftex.def Info: ../PNG/AREF2VCC.png used on input line 369.
 (pdftex.def)             Requested size: 236.15796pt x 172.6956pt.
-)
-[44 <../PNG/AREF2_1V.png> <../PNG/AREF2VCC.png>] [45]
+
+[44]) [45 <../PNG/AREF2_1V.png> <../PNG/AREF2VCC.png>]
 \openout2 = `50-measurement.aux'.
 
  (./50-measurement.tex
@@ -3153,7 +3153,7 @@ mr17.pfb></usr/share/texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmr8.pfb
 texlive/texmf-dist/fonts/type1/public/amsfonts/cm/cmti12.pfb></usr/share/texliv
 e/texmf-dist/fonts/type1/public/amsfonts/cm/cmtt12.pfb></usr/share/texmf/fonts/
 type1/public/cm-super/sfrm1200.pfb>
-Output written on ttester.pdf (112 pages, 1961508 bytes).
+Output written on ttester.pdf (112 pages, 1962074 bytes).
 PDF statistics:
  1930 PDF objects out of 2073 (max. 8388607)
  1557 compressed objects within 16 object streams
